--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,6 +38,11 @@
     height: auto;
   }
 
+  .custom-image9 {
+    max-width: 45px;
+    height: auto;
+  }
+
   .div-superior {
     margin-bottom: -40px; /* Ajusta el valor según sea necesario */
   }
@@ -48,4 +53,8 @@
 
   textarea{
     resize: none;
+  }
+/* Hacer cirular un cuadrado de imagen */
+  .circular--square {
+    border-radius: 50%;
   }
