--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,7 +39,22 @@
   }
 
   .custom-image9 {
-    max-width: 45px;
+    max-width: 50px;
+    height: auto;
+  }
+
+  .custom-image10 {
+    max-width: 190px;
+    height: auto;
+  }
+
+  .custom-image11 {
+    max-width: 160px;
+    height: auto;
+  }
+
+  .custom-image12 {
+    max-width: 500px;
     height: auto;
   }
 
