--- a/css/estilos.css
+++ b/css/estilos.css
@@ -73,3 +73,28 @@
   .circular--square {
     border-radius: 50%;
   }
+
+  .flotar {
+    animation-name: flotar;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes flotar {
+    0% {
+      transform: translateX(10px) translateY(-10px) rotate(10deg);
+    }
+    25% {
+      transform: translateX(100px) translateY(30px) rotate(5deg);
+    }
+    50% {
+      transform: translateX(10px) translateY(60px) rotate(10deg);
+    }
+    75% {
+      transform: translateX(100px)  translateY(30px) rotate(5deg);
+    }
+    100% {
+      transform: translateX(10px)  translateY(-10px) rotate(10deg);
+    }
+  }
+  
