--- a/css/login.css
+++ b/css/login.css
@@ -84,6 +84,7 @@
     height: 80%;
     width: 70%;
     background-color: aliceblue;
+    border-radius: 3%;
 }
 /* Texto contenido en la imagen*/
 .login_img_text{
