--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 33px 9%;
+    padding: 33px 4%;
     background: transparent;
 }
 
@@ -24,7 +24,7 @@ header{
     font-size: 30px;
     font-weight: 700;
     color: white;
-    margin-left: -600px;
+    margin-left: -605px;     /* Estableciendo separación de nombre de logo con imagen dek logo*/
 }
 
 .navlist{
@@ -59,10 +59,10 @@ header{
 }
 
 section{
-    padding: 0 19%;
+    padding: 0 50%;/* Estableciendo la posición en el eje x de la sección que contiene la sección e imagen del landingPage */
 }
 
-.hero-text{margin-left: -30%;}
+.hero-text{margin-left: -100%;}  /* Separando el texto de la imagen hacia el lado izquierdo */
 
 .hero-text h5{
     font-size: 14px;
@@ -73,29 +73,33 @@ section{
 
 .hero-text h1{
     font-family: 'Permanent Marker', cursive;
-    font-size: 90px;
+    font-size: 110px;
     line-height: 1;
     color: white;
     margin: 0 0 45px;
 }
 
+
+/* Estilizando texto de 'Bienvenido a ' */
 .hero-text h4{
-    font-size: 35px;
-    font-weight: 600;
-    color: white;
-    margin-bottom: 10px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 60px;
+    line-height: 0;
+    color: rgb(255, 255, 255);
+    margin: 0 0 45px; 
 }
 
 .hero-text p{
-    color: white;
-    font-size: 20px;
-    line-height: 1.9;
-    margin-bottom: 40px;
+    color: orange;
+    font-size: 27px;
+    line-height: 1.5;
+    margin-bottom: 50px;
+    font-weight: bold;
 }
 
+/* Estableciendo diseño de la imagen flotante */
 .hero-img img{
-    width: 600px;
+    width: 525px;
     height: auto;
 }
 
@@ -130,33 +134,18 @@ section{
     margin-right: 5px;
 }
 
-.scroll-down{
-    position: absolute;
-    bottom: 6%;
-    right: 9%;
-}
 
-.scroll-down i{
-    display: block;
-    padding: 12px;
-    font-size: 25px;
-    color: white;
-    background: #FD00A7;
-    border-radius: 30px;
-    transition: all .50s ease;
-}
 
-.scroll-down i:hover{
-    transform: translateY(-5px);
-}
 
-@media (max-width: 1535px){
+
+
+@media (max-width: 1800px){
     header{
         padding: 15px 3%;
         transition: .2s;
     }
     .scroll-down{
-        right: 3%;
+        right: 50%;
         transition: .2s;
     }
 }
@@ -197,7 +186,7 @@ section{
     .hero{
         height: 100%;
         gap: 1rem;
-        grid-template-columns: 1fr;
+        grid-template-columns: 10fr;
     }
     .scroll-down{
         display: none;
@@ -237,7 +226,7 @@ section{
 
 .flotar {
     animation-name: flotar;
-    animation-duration: 5s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
   }
   
